--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,9 +1,13 @@
+redis: &redis
+  adapter: redis
+  url: redis://localhost:6379
+
 development:
-  adapter: async
+  adapter: *redis
 
 test:
-  adapter: async
+  adapter: *redis
 
 production:
-  adapter: redis
-  url: redis://localhost:6379/1
+  adapter: *redis
+
