--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -39,6 +39,12 @@ index answer_core
   type = plain
   path = /home/hawk911/Study/RoR_extended/db/sphinx/development/answer_core
   docinfo = extern
+  morphology = stem_ru
+  min_word_len = 2
+  charset_type = utf-8
+  min_prefix_len = 0
+  min_infix_len = 3
+  enable_star = 1
   source = answer_core_0
 }
 
@@ -69,6 +75,12 @@ index comment_core
   type = plain
   path = /home/hawk911/Study/RoR_extended/db/sphinx/development/comment_core
   docinfo = extern
+  morphology = stem_ru
+  min_word_len = 2
+  charset_type = utf-8
+  min_prefix_len = 0
+  min_infix_len = 3
+  enable_star = 1
   source = comment_core_0
 }
 
@@ -98,6 +110,12 @@ index question_core
   type = plain
   path = /home/hawk911/Study/RoR_extended/db/sphinx/development/question_core
   docinfo = extern
+  morphology = stem_ru
+  min_word_len = 2
+  charset_type = utf-8
+  min_prefix_len = 0
+  min_infix_len = 3
+  enable_star = 1
   source = question_core_0
 }
 
@@ -125,6 +143,12 @@ index user_core
   type = plain
   path = /home/hawk911/Study/RoR_extended/db/sphinx/development/user_core
   docinfo = extern
+  morphology = stem_ru
+  min_word_len = 2
+  charset_type = utf-8
+  min_prefix_len = 0
+  min_infix_len = 3
+  enable_star = 1
   source = user_core_0
 }
 
